# wx

./: LICENSE  README.md  pyproject.toml  requirements.in  requirements.txt
tests/: __init__.py  test_wx.py
wx/: __init__.py  cli.py  wx.py
